<resources>
    <string name="app_name">Coinz</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_profile">ProfileActivity</string>

    <string-array name="currencies">
        <item>SHIL</item>
        <item>DOLR</item>
        <item>QUID</item>
        <item>PENY</item>
    </string-array>

    <string-array name="leaderboards">
        <item>All Time</item>
        <item>Friends</item>
    </string-array>

    <string name="title_activity_send_trade">SendTradeActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_set_up_account">SetUpAccountActivity</string>


    <string name="tutorial_text_1">\n\n\nWelcome to Coinz \n\n\n The goal of Coinz is to get as much <b>GOLD</b> as
        possible.\nCoinz are positioned all around George Square, in order to collect them you have
        to walk to its location in the real world! Walking near a coin will activate your coin
        magnet that scoops up any coins within 25m of you. You can see the location of coinz on the
        map screen. New coinz are added each day and the previous day's removed so be quick!
    </string>
    <string name="tutorial_button_1">
        Got it!
    </string>
    <string name="tutorial_text_2">
        The coinz you collect are stored in your wallet. There are 4 different types of coin you
        will pick up: PENY, QUID, DOLR and SHIL. Once coins are in your wallet, you can trade them
        with other players or exchange them with the bank.\n\n\nBy submitting coinz to the bank you get
        GOLD in return, GOLD represents you score and cannot be deposited or traded. The value of
        each coin in GOLD change as players deposit into the bank meaning that if everyone puts in
        one type of coin, it\'s value will fall meaning you get less GOLD for the same amount of
        coinz! It\'s up to you to figure out when the best time to deposit is.
    </string>
    <string name="tutorial_button_2">
        Okay!
    </string>
    <string name="tutorial_text_3">
        You can compare your performance with other player using the Community Tab, as well as your
        friends! Find friends by searching their display name or email they used to sign up to
        coinz.\n\n\n Okay, looks like you\'re good to go&#8230;
    </string>
    <string name="tutorial_button_3">
        Let\'s go!
    </string>

    <string name="no_friends">
        Looks like you don\'t have any friends, search for some above!
    </string>

    <string name="search_friends_fail">
        Can\'t find this user!
    </string>

    <string name="no_trades">
        You don\'t have any trades to show, try sending some coinz to another user button below
    </string>
    <string name="no_user_with_account">
        No account with this email
    </string>
    <string name="bad_email_password">
        Please enter a valid email and password
    </string>
    <string name="user_already_taken">
        That email is already taken by a user, please use another one
    </string>
    <string name="no_email">
        Please provide an email
    </string>
    <string name="no_password">
        Please provide a password
    </string>
    <string name="email_taken">
        Email is taken
    </string>
    <string name="no_username">
        Please enter a username
    </string>
    <string name="username_invalid">
        Usernames must only contain lowercase letters and numbers
    </string>
    <string name="username_taken">
        Username taken!
    </string>
    <string name="no_bank_deposit">
        Enter an amount of coins to send
    </string>
    <string name="negative_zero_depoist">
        Enter a positive amount of coins
    </string>
    <string name="not_enough_coins">
        You do not have that many coins to deposit, check your wallet
    </string>
    <string name="too_many_coins_today">
        You have already submitted 25 coins!
    </string>
    <string name="depoist_overlimit">
        You have already submitted %s coins today
    </string>
    <string name="no_trade_user">
        Enter a user to send your coins to
    </string>
    <string name="no_trade_amount">
        Enter an amount of coins to send
    </string>
    <string name="negative_zero_trade_amount">
        Enter a positive amount of coins
    </string>
    <string name="no_enough_for_trades">
        Not enough coins in your wallet
    </string>
    <string name="user_not_found">
        User not found
    </string>


</resources>
