...
            android:hint="Enter Coin Amount"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="241dp" />

        <Spinner
            android:id="@+id/cur_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="305dp" />

...
